--- a/ADV_C201_1(Solution).ipynb
+++ b/ADV_C201_1(Solution).ipynb
@@ -5,12 +5,196 @@
     "colab": {
       "name": "ADV_C201.1(Solution).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP1ZzCobtEe5DWcQyCT75b7",
+      "authorship_tag": "ABX9TyOYqb+rXc6jcVxwSyhUoLsD",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
+    },
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "d20bab4c09c84dc08ee8c2f1abca95f5": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "IntSliderModel",
+          "state": {
+            "_view_name": "IntSliderView",
+            "style": "IPY_MODEL_75d46c81255c45dd87b74a3711724f05",
+            "_dom_classes": [],
+            "description": "Slider",
+            "step": 1,
+            "_model_name": "IntSliderModel",
+            "orientation": "horizontal",
+            "max": 100,
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "value": 21,
+            "_view_count": null,
+            "disabled": false,
+            "_view_module_version": "1.5.0",
+            "min": 0,
+            "continuous_update": true,
+            "readout_format": "d",
+            "description_tooltip": null,
+            "readout": true,
+            "_model_module": "@jupyter-widgets/controls",
+            "layout": "IPY_MODEL_1f2a498afdf64d418d15b046ce6ada3c"
+          }
+        },
+        "75d46c81255c45dd87b74a3711724f05": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "SliderStyleModel",
+          "state": {
+            "_view_name": "StyleView",
+            "handle_color": null,
+            "_model_name": "SliderStyleModel",
+            "description_width": "",
+            "_view_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.2.0",
+            "_model_module": "@jupyter-widgets/controls"
+          }
+        },
+        "1f2a498afdf64d418d15b046ce6ada3c": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        },
+        "2bdcd73e9b1947aea4e40045578be1b4": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ButtonModel",
+          "state": {
+            "_view_name": "ButtonView",
+            "style": "IPY_MODEL_a681ce98215d4c49bffa662620209917",
+            "_dom_classes": [],
+            "description": "power",
+            "_model_name": "ButtonModel",
+            "button_style": "",
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "tooltip": "",
+            "_view_count": null,
+            "disabled": false,
+            "_view_module_version": "1.5.0",
+            "layout": "IPY_MODEL_25f591bfed4c450f83a2f1ab6e56ee1b",
+            "_model_module": "@jupyter-widgets/controls",
+            "icon": ""
+          }
+        },
+        "a681ce98215d4c49bffa662620209917": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ButtonStyleModel",
+          "state": {
+            "_view_name": "StyleView",
+            "_model_name": "ButtonStyleModel",
+            "_view_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "button_color": null,
+            "font_weight": "",
+            "_view_module_version": "1.2.0",
+            "_model_module": "@jupyter-widgets/controls"
+          }
+        },
+        "25f591bfed4c450f83a2f1ab6e56ee1b": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        }
+      }
     }
   },
   "cells": [
@@ -27,31 +211,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wHqk31YOzt2u"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 98,
+          "referenced_widgets": [
+            "d20bab4c09c84dc08ee8c2f1abca95f5",
+            "75d46c81255c45dd87b74a3711724f05",
+            "1f2a498afdf64d418d15b046ce6ada3c",
+            "2bdcd73e9b1947aea4e40045578be1b4",
+            "a681ce98215d4c49bffa662620209917",
+            "25f591bfed4c450f83a2f1ab6e56ee1b"
+          ]
+        },
+        "id": "wHqk31YOzt2u",
+        "outputId": "a97930b9-65d6-4c5c-f7b8-c92c3ff5fa8e"
       },
       "source": [
         "#Activity 1: using the slider, select a number and display on the text area and find the power of that number.\r\n",
         "\r\n",
         "\r\n",
         "from ipywidgets import widgets\r\n",
-        "#below is the code to create text widget that takes integer values which is stored in txt_widget variable.\r\n",
-        "txt_widget = widgets.IntText(description=\"Text Widget\")\r\n",
-        "#similarly define a variable slider_widget, and inside it store the slider widget holding integer numbers. To create integer slider widget use the widgets.Intslider() function, and inside the function give suitable description for that slider.\r\n",
         "slider_widget= widgets.IntSlider(description=\"Slider\")\r\n",
-        "#display the txt_widget variable, which holds the text widget and slider_widget variable, that holds the slider widget.\r\n",
-        "display(txt_widget,slider_widget)\r\n",
+        "#display the slider widget on the output cell.\r\n",
+        "display(slider_widget)\r\n",
         "\r\n",
-        "\r\n",
-        "#Now, here we want to link the textbox value and slider value. This is to be done as, we have to take the slider value into text box. So for this we will use widgets.jlink() function.\r\n",
-        "#this  widgets.link() function- links the value of one widget to another widget, so changes made in one widget value, updates the same change in other widget value.\r\n",
-        "#below is the code which links the text widget value, to slider_widget.(See the way it is written)\r\n",
-        "mylink = widgets.jslink((txt_widget, 'value'), (slider_widget, 'value'))\r\n",
         "\r\n",
         "\r\n",
         "def power(b):\r\n",
-        "    #define a variable power_no and inside it store the power of the value taken from text_widget. For this use the pow() function and inside it pass txt_widget.value, give ',' comma and mention the power you want to find example:(txt_widget.value,4)\r\n",
-        "    power_no= pow(txt_widget.value,2)\r\n",
-        "    #print the variable power_no, to get the output, followed by a string \"Power\".\r\n",
+        "  #inside the function define a variable power_no, and inside it find the power of any slider value. For this, use the pow() function and inside it pass two arguments, slider_widget.value and the power number. For example, slider_widget.value, 2\r\n",
+        "    power_no= pow(slider_widget.value,2)\r\n",
+        "    #using print() print the string \"Power\", followed by variable power_no.\r\n",
         "    print(\"Power\",power_no)\r\n",
         "    \r\n",
         "\r\n",
@@ -60,6 +249,57 @@
         "power_btn.on_click(power) \r\n",
         "#using the display() function call the power_btn variable to display the button on the output cell.\r\n",
         "display(power_btn)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "d20bab4c09c84dc08ee8c2f1abca95f5",
+              "version_minor": 0,
+              "version_major": 2
+            },
+            "text/plain": [
+              "IntSlider(value=0, description='Slider')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "2bdcd73e9b1947aea4e40045578be1b4",
+              "version_minor": 0,
+              "version_major": 2
+            },
+            "text/plain": [
+              "Button(description='power', style=ButtonStyle())"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Power 441\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CXx63DD48a6F"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
