--- a/ADV_C201_1(Solution).ipynb
+++ b/ADV_C201_1(Solution).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ADV_C201.1(Solution).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOYqb+rXc6jcVxwSyhUoLsD",
+      "authorship_tag": "ABX9TyMAQbfgEHkw9gNjz80qrgpD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -227,7 +227,7 @@
         "outputId": "a97930b9-65d6-4c5c-f7b8-c92c3ff5fa8e"
       },
       "source": [
-        "#Activity 1: using the slider, select a number and display on the text area and find the power of that number.\r\n",
+        "#Activity 1: using the slider, select a number and find the power of that number.\r\n",
         "\r\n",
         "\r\n",
         "from ipywidgets import widgets\r\n",
