--- a/ADV_201_2(Solution).ipynb
+++ b/ADV_201_2(Solution).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ADV_201.2(Solution).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPmQRs/HkiPRnQFVaqiZ+yo",
+      "authorship_tag": "ABX9TyNrqwAaCvMUrQ17Umil5sOF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,12 +14,12 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "8fab221c5d7d4feebed55c7bcb67e118": {
+        "81999f9bfb7b4100b168d6f1c176d9fd": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "IntSliderModel",
           "state": {
             "_view_name": "IntSliderView",
-            "style": "IPY_MODEL_4853ca7042404968a1b7b40cc915363f",
+            "style": "IPY_MODEL_027361ccc5534c1dbc378943b7766792",
             "_dom_classes": [],
             "description": "Slider",
             "step": 1,
@@ -38,10 +38,10 @@
             "description_tooltip": null,
             "readout": true,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_d18082541e6543f0a1244e71be454e24"
+            "layout": "IPY_MODEL_82269c7d647d458ba347e0ceb59a8828"
           }
         },
-        "4853ca7042404968a1b7b40cc915363f": {
+        "027361ccc5534c1dbc378943b7766792": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "SliderStyleModel",
           "state": {
@@ -56,7 +56,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "d18082541e6543f0a1244e71be454e24": {
+        "82269c7d647d458ba347e0ceb59a8828": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -107,12 +107,12 @@
             "left": null
           }
         },
-        "322b3b4576bf4187ba6e3a15f3cc697e": {
+        "fdc53e56d92643f495006771c0a1494c": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonModel",
           "state": {
             "_view_name": "ButtonView",
-            "style": "IPY_MODEL_68b119d1b2a6413a8592a35f3b2644c5",
+            "style": "IPY_MODEL_0eb9839c610f426e9422968539c02f5d",
             "_dom_classes": [],
             "description": "Square",
             "_model_name": "ButtonModel",
@@ -123,12 +123,12 @@
             "_view_count": null,
             "disabled": false,
             "_view_module_version": "1.5.0",
-            "layout": "IPY_MODEL_563d2cc64dbb4235913e0bc101418f9d",
+            "layout": "IPY_MODEL_65d5c1abd3104ab4a44f44826769e6d7",
             "_model_module": "@jupyter-widgets/controls",
             "icon": ""
           }
         },
-        "68b119d1b2a6413a8592a35f3b2644c5": {
+        "0eb9839c610f426e9422968539c02f5d": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonStyleModel",
           "state": {
@@ -143,7 +143,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "563d2cc64dbb4235913e0bc101418f9d": {
+        "65d5c1abd3104ab4a44f44826769e6d7": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -215,19 +215,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 98,
           "referenced_widgets": [
-            "8fab221c5d7d4feebed55c7bcb67e118",
-            "4853ca7042404968a1b7b40cc915363f",
-            "d18082541e6543f0a1244e71be454e24",
-            "322b3b4576bf4187ba6e3a15f3cc697e",
-            "68b119d1b2a6413a8592a35f3b2644c5",
-            "563d2cc64dbb4235913e0bc101418f9d"
+            "81999f9bfb7b4100b168d6f1c176d9fd",
+            "027361ccc5534c1dbc378943b7766792",
+            "82269c7d647d458ba347e0ceb59a8828",
+            "fdc53e56d92643f495006771c0a1494c",
+            "0eb9839c610f426e9422968539c02f5d",
+            "65d5c1abd3104ab4a44f44826769e6d7"
           ]
         },
         "id": "pAgPzQPCaMVw",
-        "outputId": "5faaf466-4f5e-4f47-e7be-de4eea58deb5"
+        "outputId": "b293bade-a58c-4f01-a688-4475d6640cc5"
       },
       "source": [
-        "#Activity 1: using the slider, select a number and find the power of that number.\r\n",
+        "#Activity 1: using the slider, select a number and find the Square Root of that number.\r\n",
         "\r\n",
         "\r\n",
         "from ipywidgets import widgets\r\n",
@@ -240,8 +240,9 @@
         "\r\n",
         "def Sqrt(b):\r\n",
         "  #inside the function define a variable sqrt_no, and inside it find the square root of any slider value. For this, use the math.sqrt() function and inside it pass two arguments, slider_widget.value and the power number.\r\n",
+        "    sqrt= math.sqrt(slider_widget.value)\r\n",
         "    #using print() print the string \"Square root\", followed by variable sqrt_no.\r\n",
-        "    print(\"Square root\",sqrt_no)\r\n",
+        "    print(\"Square root\",sqrt)\r\n",
         "  \r\n",
         "\r\n",
         "sqrt_btn = widgets.Button(description=\"Square\")\r\n",
@@ -250,13 +251,13 @@
         "#using the display() function call the sqrt_btn variable to display the button on the output cell.\r\n",
         "display(sqrt_btn)"
       ],
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "8fab221c5d7d4feebed55c7bcb67e118",
+              "model_id": "81999f9bfb7b4100b168d6f1c176d9fd",
               "version_minor": 0,
               "version_major": 2
             },
@@ -272,7 +273,7 @@
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "322b3b4576bf4187ba6e3a15f3cc697e",
+              "model_id": "fdc53e56d92643f495006771c0a1494c",
               "version_minor": 0,
               "version_major": 2
             },
